[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gsb-wifi-manager"
version = "1.0.0"
description = "GSB Wi-Fi Auto-Pilot & Manager with GUI"
readme = "README.md"
authors = [{ name = "ugurboz", email = "uboz4707@hotmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "beautifulsoup4",
    "keyring",
    "customtkinter",
    "darkdetect",
    "packaging"
]

[project.urls]
Homepage = "https://github.com/ugurboz/GSB-Wifi-Manager"
Issues = "https://github.com/ugurboz/GSB-Wifi-Manager/issues"

[project.scripts]
gsb = "gsb_app:main"

[tool.setuptools]
py-modules = ["gsb_app", "gsb_login"]
